--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.14.2",
     "react-tsparticles": "^2.10.1",
-    "tsparticles": "^2.10.1"
+    "tsparticles": "^2.10.1",
+    "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
