--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.14.2",
     "react-tsparticles": "^2.10.1",
+    "swiper": "^10.2.0",
     "tsparticles": "^2.10.1",
     "typewriter-effect": "^2.20.1"
   },
